// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should pass active flag to active slot 1`] = `
<div>
  <Button
    active={false}
    key="one"
    name="one"
  />
  <Button2
    active={true}
    key="two"
    name="two"
  />
</div>
`;

exports[`should renderer only active slot if onlyActive=true 1`] = `
<div>
  <Button2
    active={true}
    key="two"
    name="two"
  />
</div>
`;

exports[`should renderer slots and pass props 1`] = `
<div>
  <Button
    id="Pizza"
    key="button1"
    name="button1"
  />
  <Button2
    id="Pizza"
    key="button2"
    name="button2"
  />
</div>
`;

exports[`should renderer slots in id/render format 1`] = `
<div>
  <Button
    id="Pizza"
    key="one"
    name="one"
  />
  <Button2
    id="Pizza"
    key="two"
    name="two"
  />
</div>
`;
